--- a/Lab8/Week2QRdecompositionGroup44.ipynb
+++ b/Lab8/Week2QRdecompositionGroup44.ipynb
@@ -436,19 +436,17 @@
         "\n",
         "## Explanation:\n",
         "\n",
-        "As you could see q,r is not exactly equal to qq, rr and this is due to\n",
-        "to the different algorithms and numerical precision used in the custom implementation (qr_decomp) and the scipy.linalg.qr function.\n",
+        "Como se pudo observar, q, r no es exactamente igual a qq, rr, y esto se debe a los diferentes algoritmos y precisión numérica utilizados en la implementación personalizada (qr_decomp) y la función scipy.linalg.qr.\n",
         "\n",
-        "QR decomposition is not unique, meaning that there can be multiple valid decompositions for a given matrix. The decompositions may differ in signs and scaling of the columns of Q and the elements of R. These differences can arise from different approaches to computing the reflection vectors and the order in which the Householder transformations are applied.\n",
+        "La descomposición QR no es única, lo que significa que puede haber múltiples descomposiciones válidas para una matriz dada. Las descomposiciones pueden diferir en signos y escalas de las columnas de Q y los elementos de R. Estas diferencias pueden surgir debido a diferentes enfoques para calcular los vectores de reflexión y el orden en que se aplican las transformaciones de Householder.\n",
         "\n",
-        "In addition, numerical precision can introduce small differences in the results. Matrix computations involve floating-point arithmetic, which has inherent limitations in representing real numbers precisely. These limitations can lead to slight discrepancies in the computed results, especially when dealing with ill-conditioned matrices or computations involving small numbers.\n",
+        "Además, la precisión numérica puede introducir pequeñas diferencias en los resultados. Los cálculos de matrices involucran aritmética de punto flotante, que tiene limitaciones inherentes para representar números reales de manera precisa. Estas limitaciones pueden generar discrepancias leves en los resultados calculados, especialmente cuando se trata de matrices mal condicionadas o cálculos que involucran números pequeños.\n",
         "\n",
-        "However, in the QR decomposition, Q is an orthogonal matrix, and R is an upper triangular matrix. When we compute q@r and qq@rr, the matrix multiplication cancels out the orthogonal properties of Q and qq with the upper triangular structure of R and rr.\n",
+        "Sin embargo, en la descomposición QR, Q es una matriz ortogonal y R es una matriz triangular superior. Cuando calculamos q@r y qq@rr, la multiplicación de matrices anula las propiedades ortogonales de Q y qq con la estructura triangular superior de R y rr.\n",
         "\n",
-        "Multiplying an orthogonal matrix Q with an upper triangular matrix R does not change the orthogonality of Q. Therefore, q@r and qq@rr are both orthogonal matrices, and their product is still an orthogonal matrix.\n",
+        "Multiplicar una matriz ortogonal Q con una matriz triangular superior R no cambia la ortogonalidad de Q. Por lo tanto, q@r y qq@rr son ambas matrices ortogonales, y su producto sigue siendo una matriz ortogonal.\n",
         "\n",
-        "On the other hand, directly comparing q with qq and r with rr does not take into account the differences in scaling and signs that can occur in different QR decompositions.\n",
-        "\n",
+        "Por otro lado, comparar directamente q con qq y r con rr no tiene en cuenta las diferencias en escalas y signos que pueden ocurrir en diferentes descomposiciones QR.\n",
         "\n"
       ]
     },
